[gd_scene load_steps=6 format=3 uid="uid://db2jh1lds0oyr"]

[ext_resource type="StyleBox" uid="uid://bxkkepypipykx" path="res://src/scenes/dialog/dialog_back.tres" id="1_8npu4"]
[ext_resource type="Script" uid="uid://0unqctyuk02l" path="res://src/scenes/dialog/auto_setting_dialog.gd" id="1_wfjhl"]
[ext_resource type="Theme" uid="uid://okeq2d56howe" path="res://theme/common.tres" id="2_em0jk"]
[ext_resource type="Script" uid="uid://dee063as2b3jr" path="res://src/scenes/widget/drag_control.gd" id="4_uvckq"]
[ext_resource type="PackedScene" uid="uid://ck22puk0vt35n" path="res://src/scenes/widget/close_button.tscn" id="5_0625k"]

[node name="AutoSettingDialog" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 71.0
offset_top = 103.0
offset_right = 71.0
offset_bottom = 103.0
script = ExtResource("1_wfjhl")

[node name="Back" type="Panel" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 311.0
theme_override_styles/panel = ExtResource("1_8npu4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 131.0
offset_bottom = 50.0
theme = ExtResource("2_em0jk")
text = "挂机设置"

[node name="DragControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 55.0
script = ExtResource("4_uvckq")

[node name="HpWarningLine" type="Control" parent="."]
anchors_preset = 0
offset_left = 23.0
offset_top = 127.0
offset_right = 23.0
offset_bottom = 127.0

[node name="Label" type="Label" parent="HpWarningLine"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 161.0
offset_bottom = 21.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
text = "HP警戒值："

[node name="LineEdit" type="LineEdit" parent="HpWarningLine"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = -25.0
offset_right = 297.0
offset_bottom = 25.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
text = "30"
max_length = 5
virtual_keyboard_type = 2

[node name="MpWarningLine" type="Control" parent="."]
anchors_preset = 0
offset_left = 23.0
offset_top = 188.0
offset_right = 23.0
offset_bottom = 188.0

[node name="Label" type="Label" parent="MpWarningLine"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 161.0
offset_bottom = 21.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
text = "MP警戒值："

[node name="LineEdit" type="LineEdit" parent="MpWarningLine"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = -25.0
offset_right = 297.0
offset_bottom = 25.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
text = "30"
max_length = 5
virtual_keyboard_type = 2

[node name="AttackSkill" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 23.0
offset_top = 246.0
offset_right = 23.0
offset_bottom = 246.0

[node name="Label" type="Label" parent="AttackSkill"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 161.0
offset_bottom = 21.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
text = "挂机技能："

[node name="OptionButton" type="OptionButton" parent="AttackSkill"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 165.0
offset_top = -25.0
offset_right = 300.0
offset_bottom = 25.0
grow_vertical = 2
theme = ExtResource("2_em0jk")
theme_override_font_sizes/font_size = 30
item_count = 1
popup/item_0/text = "123123"
popup/item_0/id = 0

[node name="OKButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 200.0
offset_top = 251.0
offset_right = 320.0
offset_bottom = 301.0
grow_horizontal = 2
theme = ExtResource("2_em0jk")
text = "保存"

[node name="CloseButton" parent="." instance=ExtResource("5_0625k")]
layout_mode = 0
offset_left = 442.0
offset_top = 6.0
offset_right = 492.0
offset_bottom = 56.0

[connection signal="pressed" from="OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
